# fuzzyRulesML

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Readme  Readme.md  iris_targets_train.json  main.cpp
cmake/: clang-toolchain.cmake  gcc13-toolchain.cmake  gcc14-toolchain.cmake
lib/: data.cpp  data.hpp  dataset.cpp  dataset.hpp  membership_functions.hpp  optimizer.hpp  reasoner.hpp  rules.cpp  rules.hpp  variable.hpp
test/: download_iris.py  fuzzyRulesML  iris_features_test.json  iris_features_train.json  iris_targets_test.json
tests/: membership_test.cpp  reasoner_test.cpp  rules_test.cpp
tools/: download_iris.py
